package com.company;

import java.util.LinkedList;
import java.util.Queue;

public class QueueClass {

    public static Queue<CarClass> queueCar = new LinkedList<>();
    public static Integer passCount = 0;
    public static Double mass = 0.0;

}
